<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp"
    tools:context=".form.FormActivity">

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_txt_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_fullname"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_phone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_txt_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/field_birthdate"
            android:inputType="none" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/chk_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Nam" />

        <RadioButton
            android:id="@+id/chk_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="Nữ" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/select_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/field_subject"
            android:inputType="none" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_txt_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_note"
            android:lines="3"
            android:maxLines="5"
            android:minLines="3"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_txt_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_level"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="Thêm"
            android:textColor="@color/white"
            app:backgroundTint="@color/purple_500" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="Cập nhật"
            android:textColor="@color/white"
            app:backgroundTint="@color/purple_500" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="Xóa"
            android:textColor="@color/white"
            app:backgroundTint="@color/purple_500" />
    </LinearLayout>

</LinearLayout>